--- a/maps-app/res/values-sw600dp/dimens.xml
+++ b/maps-app/res/values-sw600dp/dimens.xml
@@ -5,4 +5,6 @@
          screen margins) for sw600dp devices (e.g. 7" tablets) here.
     -->
 
+    <dimen name="route_overview_text_size">20sp</dimen>
+
 </resources>
