--- a/maps-app/res/layout/maps_app_activity.xml
+++ b/maps-app/res/layout/maps_app_activity.xml
@@ -10,11 +10,12 @@
         android:layout_height="match_parent" />
     <!-- The navigation drawer -->
     <ListView android:id="@+id/maps_app_activity_left_drawer"
+        style="@style/drawer_listView_style"
+        android:background="@drawable/navigation_drawer_background"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#111"/>
+        android:dividerHeight="0dp"/>
 </android.support.v4.widget.DrawerLayout>
