layout adjustments portal url view

--- a/maps-app/res/layout/sign_in_activity_portal_url_layout.xml
+++ b/maps-app/res/layout/sign_in_activity_portal_url_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:orientation="vertical" >
 
     <TextView
@@ -15,37 +15,43 @@
         android:text="@string/specify_portal_url"
         android:textSize="17sp" />
 
-    <EditText
-        android:id="@+id/sign_in_activity_portal_url_edittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/portal_url_hint"
-        android:inputType="textUri" >
-
-        <requestFocus />
-    </EditText>
-
     <LinearLayout
-        style="?android:attr/buttonBarStyle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right" >
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/sign_in_activity_continue_button"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/sign_in_activity_portal_url_edittext"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/continue_label"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:ems="10"
+            android:hint="@string/portal_url_hint"
+            android:inputType="textUri"
+            android:minWidth="300dp" >
 
-        <Button
-            android:id="@+id/sign_in_activity_cancel_button"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            <requestFocus />
+        </EditText>
+
+        <LinearLayout
+            style="?android:attr/buttonBarStyle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/cancel" />
+            android:gravity="right" >
 
+            <Button
+                android:id="@+id/sign_in_activity_continue_button"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/continue_label" />
+
+            <Button
+                android:id="@+id/sign_in_activity_cancel_button"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
