--- a/maps-app/res/layout/maps_app_activity.xml
+++ b/maps-app/res/layout/maps_app_activity.xml
@@ -16,6 +16,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"/>
+        android:divider="@color/esri_gray"
+        android:dividerHeight="1px"/>
 </android.support.v4.widget.DrawerLayout>
