check for client id and set standard license level when signing in

--- a/maps-app/res/values/app_settings.xml
+++ b/maps-app/res/values/app_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- OAuth App ID -->
-    <string name="app_oauth_id">explorerandroid</string>
+    <!-- TODO: add your OAuth Client ID here-->
+    <string name="client_id"></string>
 
 </resources>
