--- a/maps-app/res/layout/map_fragment_layout.xml
+++ b/maps-app/res/layout/map_fragment_layout.xml
@@ -3,5 +3,12 @@
     android:id="@+id/map_fragment_map_container_frame_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+    
+    <Button
+        android:id="@+id/floating_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:icon="@drawable/gps" />
 
 </FrameLayout>
