--- a/maps-app/res/layout/routing_layout.xml
+++ b/maps-app/res/layout/routing_layout.xml
@@ -1,37 +1,65 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".RoutingDialogFragment" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <EditText
-        android:id="@+id/startPoint"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:text="@string/my_location" >
+        android:layout_marginTop="10dp"
+        android:orientation="vertical" >
 
-        <requestFocus />
-    </EditText>
+        <SearchView
+            android:id="@+id/startPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </SearchView>
 
-    <EditText
-        android:id="@+id/endPoint"
-        android:layout_width="match_parent"
+        <SearchView
+            android:id="@+id/endPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </SearchView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text" />
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal" 
+        android:layout_marginLeft="20dp">
 
-    <Button
-        android:id="@+id/getRouteButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/get_route"
-        android:layout_marginTop="20dp" />
+        <ImageView
+            android:id="@+id/iv_myDialogLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="25dp"
+            android:contentDescription="@string/useCurrlocation"
+            android:src="@drawable/ic_my_location" >
+        </ImageView>
+
+        <Button
+            android:id="@+id/getRouteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_light"
+            android:padding="5dp"
+            android:text="@string/get_route" />
+
+        <ImageView
+            android:id="@+id/iv_interchange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:contentDescription="@string/swap_addresses"
+            android:src="@drawable/ic_action_revert" >
+        </ImageView>
+    </LinearLayout>
 
 </LinearLayout>
