--- a/maps-app/res/layout/floatingbutton.xml
+++ b/maps-app/res/layout/floatingbutton.xml
@@ -10,7 +10,7 @@
         android:layout_width="55sp"
         android:layout_height="55sp"
         android:background="@drawable/roundedbutton"
-        android:src="@drawable/gps"
+        android:src="@drawable/ic_device_access_location_black"
         android:gravity="right" />
 
 </LinearLayout>
