--- a/maps-app/res/layout/routing_layout.xml
+++ b/maps-app/res/layout/routing_layout.xml
@@ -5,61 +5,49 @@
     android:background="@android:color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
-        <SearchView
-            android:id="@+id/startPoint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </SearchView>
-
-        <SearchView
-            android:id="@+id/endPoint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </SearchView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal" 
-        android:layout_marginLeft="20dp">
-
-        <ImageView
-            android:id="@+id/iv_myDialogLocation"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="25dp"
-            android:contentDescription="@string/useCurrlocation"
-            android:src="@drawable/ic_my_location" >
-        </ImageView>
+            android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/getRouteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_light"
-            android:padding="5dp"
-            android:text="@string/get_route" />
+            <SearchView
+                android:id="@+id/startPoint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+            </SearchView>
+
+            <SearchView
+                android:id="@+id/endPoint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+            </SearchView>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/iv_interchange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
+            android:layout_gravity="center_vertical"
             android:contentDescription="@string/swap_addresses"
             android:src="@drawable/ic_action_revert" >
+
         </ImageView>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/getRouteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_light"
+        android:padding="5dp"
+        android:text="@string/get_route" 
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
