--- a/maps-app/res/menu/actions.xml
+++ b/maps-app/res/menu/actions.xml
@@ -28,5 +28,10 @@
         android:icon="@android:drawable/ic_menu_edit"
         android:showAsAction="ifRoom"
         android:title="@string/action_measure"/>
-      
+    <item
+        android:id="@+id/location"
+        android:icon="@android:drawable/ic_menu_mylocation"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_location"/>
+
 </menu>
