Icons added for My Maps and Sign Out

--- a/maps-app/res/values/app_settings.xml
+++ b/maps-app/res/values/app_settings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <!-- TODO: add your OAuth Client ID here-->
-    <string name="client_id">Bd4a0sJsiiSzuhcO</string>
+    <string name="client_id"></string>
 
 </resources>
