--- a/maps-app/src/main/res/layout/directions_list_item.xml
+++ b/maps-app/src/main/res/layout/directions_list_item.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:contentDescription="directions maneuver"/>
 
     <LinearLayout
         android:layout_width="match_parent"
