--- a/maps-app/src/main/res/layout/route_overview_layout.xml
+++ b/maps-app/src/main/res/layout/route_overview_layout.xml
@@ -22,7 +22,8 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:src="@drawable/pin_green"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:contentDescription="route overview symbol"/>
 
     <LinearLayout
         android:id="@+id/route_overview_info_layout"
