--- a/maps-app/src/main/res/layout/directions_list_item.xml
+++ b/maps-app/src/main/res/layout/directions_list_item.xml
@@ -20,7 +20,7 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:visibility="visible"
-        android:contentDescription="directions maneuver"/>
+        android:contentDescription="@string/directions_maneuver"/>
 
     <LinearLayout
         android:layout_width="match_parent"
