--- a/maps-app/src/main/res/layout/drawer_item_layout.xml
+++ b/maps-app/src/main/res/layout/drawer_item_layout.xml
@@ -20,6 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:src="@drawable/action_basemaps"
-        android:contentDescription="drawer item icon"/>
+        android:contentDescription="@string/drawer_time_icon"/>
     
 </LinearLayout>
