--- a/maps-app/src/main/res/layout/route_overview_layout.xml
+++ b/maps-app/src/main/res/layout/route_overview_layout.xml
@@ -23,7 +23,7 @@
         android:paddingRight="5dp"
         android:src="@drawable/pin_green"
         android:visibility="visible"
-        android:contentDescription="route overview symbol"/>
+        android:contentDescription="@string/route_overview_symbol"/>
 
     <LinearLayout
         android:id="@+id/route_overview_info_layout"
