add tools to actionbar

--- a/maps-app/src/main/res/menu/action.xml
+++ b/maps-app/src/main/res/menu/action.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+
     <item
         android:id="@+id/location"
         android:icon="@android:drawable/ic_menu_mylocation"
         android:showAsAction="always"
         android:title="@string/action_location"/>
+
+    <item
+        android:id="@+id/action_basemap"
+        android:icon="@drawable/action_basemaps"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:title="@string/menu_basemaps"/>
+
+    <item
+        android:id="@+id/action_measure"
+        android:icon="@drawable/eaf_measure_draft"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_measure"/>
     
 </menu>
