--- a/maps-app/src/main/res/layout/basemap_image.xml
+++ b/maps-app/src/main/res/layout/basemap_image.xml
@@ -8,7 +8,7 @@
         android:id="@+id/basemap_grid_item_thumbnail_framelayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/esri_off_white" >
+        android:background="@color/colorPrimaryLight" >
 
         <ImageView
             android:id="@+id/basemap_grid_item_thumbnail_imageview"
