--- a/maps-app/src/main/res/layout/directions_list_item.xml
+++ b/maps-app/src/main/res/layout/directions_list_item.xml
@@ -38,7 +38,7 @@
             android:gravity="left|center_vertical"
             android:singleLine="false"
             android:text="These are the directions and they may be more than one line"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorTextPrimary"
             android:textSize="@dimen/route_overview_text_size"
             tools:ignore="HardcodedText" />
 
@@ -50,7 +50,7 @@
             android:gravity="right|center_vertical"
             android:singleLine="true"
             android:text="19.3 km"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/colorTextSecondary"
             android:textSize="@dimen/route_overview_text_size"
             tools:ignore="HardcodedText" />
     </LinearLayout>
