--- a/maps-app/src/main/res/layout/routing_layout.xml
+++ b/maps-app/src/main/res/layout/routing_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorPrimaryLight"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
@@ -45,7 +45,7 @@
         android:id="@+id/getRouteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_light"
+        android:background="@color/colorAccent"
         android:padding="5dp"
         android:text="@string/get_route" 
         android:layout_gravity="center_horizontal"/>
