--- a/maps-app/src/main/res/values/colors.xml
+++ b/maps-app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="colorTextSecondary">#727272</color>
     <color name="colorDivider">#B6B6B6</color>
 
+
     <color name="esri_white">#FFFFFFFF</color>
     <color name="esri_off_white">#FFF9F9F9</color>
     <color name="esri_lightest_gray">#FFEDEDED</color>
@@ -20,6 +21,8 @@
     <color name="esri_dark_gray">#FF595959</color>
     <color name="esri_darker_gray">#FF333333</color>
     <color name="esri_darkest_gray">#FF1F1F1F</color>
+
+
     <color name="divider_color">#FFCCCCCC</color>
     <color name="highlight_color">#BF35AC46</color>
     <color name="drawer_shadow_background">#7F323232</color>
@@ -35,31 +38,31 @@
     <color name="portal_item_background">@color/colorAccent</color>
     <color name="app_primary_background">@color/colorPrimary</color>
     <color name="app_secondary_background">@color/colorPrimaryLight</color>
-    <color name="app_tertiary_background">@color/esri_lighter_gray</color>
+    <color name="app_tertiary_background">@color/colorPrimaryLight</color>
     <color name="title_text_color">@color/colorText</color>
     <color name="primary_text_color">@color/colorTextPrimary</color>
     <color name="secondary_text_color">@color/colorTextSecondary</color>
     <!-- Should be defined by each app in their own colors.xml -->
-    <color name="tertiary_text_color">#FF000000</color>
+    <color name="tertiary_text_color">@color/colorTextPrimary</color>
 
     <!-- Android ICS color -->
-    <color name="android_holo_light_blue">#FF33B5E5</color>
-    <color name="android_holo_light_blue_translucent">#5533B5E5</color>
-    <color name="transparent">#00000000</color>
+    <color name="android_holo_light_blue">@color/colorPrimaryLight</color>
+    <color name="android_holo_light_blue_translucent">@color/colorPrimary</color>
+    <color name="transparent">@android:color/transparent</color>
 
     <!-- Basemap thumbnail -->
     <color name="basemap_thumbnail_default">@color/transparent</color>
-    <color name="basemap_thumbnail_pressed">#9933B5E5</color>
-    <color name="basemap_item_background">#FFF0F0F0</color>
+    <color name="basemap_thumbnail_pressed">@color/colorPrimaryDark</color>
+    <color name="basemap_item_background">@color/colorPrimaryLight</color>
 
     <!-- Map result -->
-    <color name="map_results_ribbon_item_default">@android:color/white</color>
-    <color name="map_results_ribbon_item_pressed">@color/android_holo_light_blue</color>
+    <color name="map_results_ribbon_item_default">@color/colorPrimaryLight</color>
+    <color name="map_results_ribbon_item_pressed">@color/colorPrimaryLight</color>
 
     <!-- Text -->
-    <color name="disabled_text_color">#FF888888</color>
+    <color name="disabled_text_color">@color/colorTextSecondary</color>
     
     <!-- callout -->
-    <color name="place_callout_frame_color">@color/esri_gray</color>
+    <color name="place_callout_frame_color">@color/colorPrimaryLight</color>
 
 </resources>
