updated colors to material palette

--- a/maps-app/src/main/res/color/drawer_item_text_color_selector.xml
+++ b/maps-app/src/main/res/color/drawer_item_text_color_selector.xml
@@ -9,8 +9,8 @@
   <item
     android:state_pressed="true"
     android:state_enabled="true"
-    android:color="@color/esri_white" />
+    android:color="@color/colorPrimaryLight" />
   
-  <item android:color="@color/drawer_item_text_color" />
+  <item android:color="@color/colorTextPrimary" />
 
 </selector>
