--- a/maps-app/src/main/res/drawable/drawer_horizontal_divider.xml
+++ b/maps-app/src/main/res/drawable/drawer_horizontal_divider.xml
@@ -3,7 +3,7 @@
 
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@color/esri_white" />
+      <solid android:color="@color/colorPrimaryLight" />
     </shape>
   </item>
   <item
@@ -11,7 +11,7 @@
     android:right="@dimen/horizontal_divider_right">
     <shape android:shape="rectangle">
       <solid
-        android:color="@color/divider_color" />
+        android:color="@color/colorDivider" />
     </shape>
   </item>
 
