--- a/maps-app/src/main/res/drawable/horizontal_divider.xml
+++ b/maps-app/src/main/res/drawable/horizontal_divider.xml
@@ -6,7 +6,7 @@
         android:right="@dimen/horizontal_divider_right" >
         <shape android:shape="rectangle" >
             <solid
-                android:color="@color/divider_color" />
+                android:color="@color/colorDivider" />
         </shape>
     </item>
 
