--- a/maps-app/src/main/res/drawable/list_item_pressed.xml
+++ b/maps-app/src/main/res/drawable/list_item_pressed.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle" >
 
     <solid 
-        android:color="@color/highlight_color" />
+        android:color="@color/colorPrimary" />
 
 </shape>
