--- a/maps-app/src/main/res/drawable/navigation_drawer_background.xml
+++ b/maps-app/src/main/res/drawable/navigation_drawer_background.xml
@@ -4,12 +4,12 @@
 
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@color/drawer_shadow_background" />
+      <solid android:color="@color/colorPrimary" />
     </shape>
   </item>
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@color/esri_white" />
+      <solid android:color="@color/colorPrimaryLight" />
     </shape>
   </item>
 
