--- a/maps-app/src/main/res/layout/maps_app_activity.xml
+++ b/maps-app/src/main/res/layout/maps_app_activity.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="start"
         android:background="@color/colorPrimary"
         android:choiceMode="singleChoice"
-        android:divider="@color/divider_color"
+        android:divider="@color/colorDivider"
         android:dividerHeight="1px" />
 
 </android.support.v4.widget.DrawerLayout>
