--- a/maps-app/src/main/res/drawable/fab_ripple.xml
+++ b/maps-app/src/main/res/drawable/fab_ripple.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/colorPrimary">
+    android:color="@color/colorAccent">
     <item>
         <shape android:shape="oval">
             <solid android:color="@color/colorPrimaryDark" />
