--- a/maps-app/src/main/res/values-v16/styles.xml
+++ b/maps-app/src/main/res/values-v16/styles.xml
@@ -4,7 +4,7 @@
         Base application theme for API 16+. This theme completely replaces
         AppBaseTheme from res/values/styles.xml on API 11+ devices.
     -->
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat">
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <!-- API 16 theme customizations can go here. -->
     </style>
 
